updated tests so DFATest now is testing the getDistinguishTable (appears to be working correctly) and testing DFAMinimization() (which is not working correctly, merging the states does not seem to be working properly);
about to updateDFAMinimization to start using the createDistinguishTable() function as opposed to that wacky 2d boolean array

--- a/build.xml
+++ b/build.xml
@@ -2,11 +2,18 @@
 
 	<property name="src.dir" value="./src"/>
 	<property name="build.dir" value="./bin"/>
+	<property name="test.dir" value="./tests"/>
 
 	<target name="compile">
 
 		<javac srcdir="${src.dir}" destdir="${build.dir}" includeantruntime="false"/>
 	
+	</target>
+
+
+	<target name="test" depends="compile">
+		<javac srcdir="${test.dir}" destdir="${build.dir}" includeantruntime="false"/>
+		<java className="DFATest" classpath="${build.dir}" />
 	</target>
 
 </project>
