--- a/build.xml
+++ b/build.xml
@@ -5,7 +5,7 @@
 	<property name="test.dir" value="./tests"/>
 
 	<target name="compile">
-
+		<mkdir dir="${build.dir}" />
 		<javac srcdir="${src.dir}" destdir="${build.dir}" includeantruntime="false"/>
 	
 	</target>
