added clean target; updated testInLangage2

--- a/build.xml
+++ b/build.xml
@@ -16,4 +16,10 @@
 		<java className="DFATest" classpath="${build.dir}" />
 	</target>
 
+	<target name="clean" >
+		<delete>
+			<fileset dir="${build.dir}" includes="*.class" />
+		</delete>
+	</target>
+
 </project>
