some updates to NFATest to prep for test functions; not fully implemeted; change how the NState hashCode is computed (a bit more relilable);

--- a/build.xml
+++ b/build.xml
@@ -14,6 +14,7 @@
 	<target name="test" depends="compile">
 		<javac srcdir="${test.dir}" destdir="${build.dir}" includeantruntime="false"/>
 		<java className="DFATest" classpath="${build.dir}" />
+		<java className="NFATest" classpath="${build.dir}" />
 	</target>
 
 	<target name="clean" >
